Bug 391243 - New web shortcuts require restart of KRunner to be applied
Summary: New web shortcuts require restart of KRunner to be applied
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: webshortcuts (other bugs)
Version First Reported In: 5.16.5
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
: 412602 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-02-28 21:35 UTC by Øystein Steffensen-Alværvik
Modified: 2020-06-13 21:56 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Øystein Steffensen-Alværvik 2018-02-28 21:35:34 UTC
WHAT WENT WRONG:
Added new webshortcuts that Krunner only recognised after restarting session.

WHAT I EXPECTED:
New webshortcuts should take effect after adding them and hitting Apply, without the user needing to end their session.

STEPS TO REPRODUCE:
1) Navigate to System Settings → Workspace→Shortcuts→Web shortcuts
2)Press New... to add a new search provider. Type the name, address, shortcut and press OK.
(I tried Norwegian Wikipedia with url https://nb.wikipedia.org/wiki/Special:Search?search=\{@}&go=Go and shortcut 'wpno')
3. Press Apply. If you have checked 'Use only preferred shortcuts', make sure to mark the new shortcut 'Preferred'.
4. Hit Alt+Space to open Krunner and write the new shortcut followed by a ':'. (So in my case I wrote 'wpno:test'). Hit Enter.
5. Nothing happens. 
6. Log out of the user session and then log back in.
7. Repeat step 4.
8. Browser launches and displays the search result. 

Neon 5.12.2
Framework 5.43.0
Qt 5.10.0
Kernel 4.4.0-116

I also reproduced this on a new user account.
Comment 1 Øystein Steffensen-Alværvik 2018-05-05 15:18:38 UTC
Shortcut **change** of an already-listed item works as expected.
Comment 2 Alexander Lohnau 2020-06-11 18:26:28 UTC
https://invent.kde.org/frameworks/kio/-/merge_requests/41
Comment 3 Alexander Lohnau 2020-06-13 06:44:18 UTC
*** Bug 374637 has been marked as a duplicate of this bug. ***
Comment 4 Alexander Lohnau 2020-06-13 06:45:41 UTC
*** Bug 412602 has been marked as a duplicate of this bug. ***
Comment 5 Alexander Lohnau 2020-06-13 21:56:52 UTC
Git commit c04917ba8ff06f546ffbb4e56d824fdacb7df1e3 by Alexander Lohnau.
Committed on 13/06/2020 at 21:32.
Pushed by dfaure into branch 'master'.

Fix reloading of new web shortcuts

M  +1    -0    src/urifilters/ikws/kuriikwsfiltereng.cpp
M  +2    -1    src/urifilters/ikws/searchproviderregistry.h

https://invent.kde.org/frameworks/kio/commit/c04917ba8ff06f546ffbb4e56d824fdacb7df1e3