Fix reloading of new web shortcuts

BUG: 391243